--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "mod/operator"]
 	path = mod/operator
 	url = https://github.com/canonical/operator.git
-[submodule "mod/charm-helpers"]
-	path = mod/charm-helpers
-	url = https://github.com/juju/charm-helpers.git
+[submodule "jinja"]
+	path = jinja
+	url = https://github.com/pallets/jinja
