--- a/tox.ini
+++ b/tox.ini
@@ -24,7 +24,7 @@ commands = functest-run-suite {posargs}
 deps = -r{toxinidir}/tests/functional/requirements.txt
 
 [testenv:lint]
-commands = flake8
+commands = flake8 --config=.flake8
 deps =
     flake8
     flake8-docstrings
