Revert "Adapting charm to RelaxDiego's template"
This reverts commit 9667968ded5c5f0e20eb9b46cdad69cb79c91a31.

--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,24 @@
 __pycache__/
 *.py[cod]
 *$py.class
+
+# Log files
 *.log
+
 .tox/
 .coverage
+
+# vi
 .*.swp
+
+# pycharm
 .idea/
+
+#visual studio code
 .history
+
+# version data
 repo-info
+
+# reports
 report/*
-*.charm
-*.egg-info
-.last-*
-.pytest_cache
-build/
-htmlcov
