--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,8 @@ exclude =
     __pycache__,
     .tox,
     mod,
+    .history,
+    build,
 max-line-length = 120
 max-complexity = 10
 import-order-style = google
