--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,11 @@ setenv =
   PYTHONPATH = {toxinidir}/lib/:{toxinidir}
 passenv = HOME
 
+[testenv:build]
+basepython = python3
+deps = requirements.txt
+commands = charmcraft build
+
 [testenv:unit]
 commands = 
     coverage run -m unittest discover -s {toxinidir}/tests/unit -v
@@ -21,6 +26,36 @@ deps = -r{toxinidir}/tests/unit/requirements.txt
 [testenv:functional]
 changedir = {toxinidir}/tests/functional
 commands = functest-run-suite {posargs}
+deps = -r{toxinidir}/tests/functional/requirements.txt
+
+[testenv:func-noop]
+basepython = python3
+commands =
+    functest-run-suite --help
+deps = -r{toxinidir}/tests/functional/requirements.txt
+
+[testenv:func]
+basepython = python3
+commands =
+    functest-run-suite --keep-model
+deps = -r{toxinidir}/tests/functional/requirements.txt
+
+[testenv:func-smoke]
+basepython = python3
+commands =
+    functest-run-suite --keep-model --smoke
+deps = -r{toxinidir}/tests/functional/requirements.txt
+
+[testenv:func-dev]
+basepython = python3
+commands =
+    functest-run-suite --keep-model --dev
+deps = -r{toxinidir}/tests/functional/requirements.txt
+
+[testenv:func-target]
+basepython = python3
+commands =
+    functest-run-suite --keep-model --bundle {posargs}
 deps = -r{toxinidir}/tests/functional/requirements.txt
 
 [testenv:lint]
@@ -43,6 +78,3 @@ exclude =
 max-line-length = 120
 max-complexity = 10
 import-order-style = google
-
-[isort]
-force_to_top=setuppath
