--- a/bundles/bionic.yaml
+++ b/bundles/bionic.yaml
@@ -1,11 +1,11 @@
 series: bionic
-local_overlay_enabled: false
 applications:
   ubuntu-target:
     charm: cs:ubuntu
     num_units: 1
   iscsi-connector:
-    charm: /home/ubuntu/charmcraft/iscsi-connector.charm
+  # TO-DO: change path
+    charm: ./iscsi-connector.charm
   ubuntu:
     charm: cs:ubuntu
     num_units: 1
