--- a/bundles/focal.yaml
+++ b/bundles/focal.yaml
@@ -1,10 +1,10 @@
 series: bionic
-local_overlay_enabled: false
 applications:
   ubuntu-target:
     charm: cs:ubuntu
     num_units: 1
   iscsi-connector:
+  # TO-DO: change path
     charm: /home/ubuntu/charmcraft/iscsi-connector.charm
   ubuntu:
     charm: cs:ubuntu
