--- a/tests/bundles/focal.yaml
+++ b/tests/bundles/focal.yaml
@@ -1,55 +1,14 @@
- 
 series: focal
-machines:
-  '0':
-    constraints: mem=3072M
-  '1':
-  '2':
-  '3':
-  '4':
-  '5':
-  '6':
+local_overlay_enabled: false
 applications:
+  ubuntu-target:
+    charm: cs:ubuntu
+    num_units: 1
   iscsi-connector:
-    # TODO: change location
     charm: /home/ubuntu/charmcraft/iscsi-connector.charm
   ubuntu:
     charm: cs:ubuntu
     num_units: 1
-    to:
-      - '6'
-  ceph-iscsi:
-    charm: cs:~openstack-charmers-next/ceph-iscsi
-    num_units: 2
-    options:
-      rbd-metadata-pool: tmbtil
-    to:
-      - '0'
-      - '1'
-  ceph-osd:
-    charm: cs:~openstack-charmers-next/ceph-osd
-    num_units: 3
-    storage:
-      osd-devices: 'cinder,10G'
-    options:
-      osd-devices: '/dev/test-non-existent'
-    to:
-      - '0'
-      - '1'
-      - '2'
-  ceph-mon:
-    charm: cs:~openstack-charmers-next/ceph-mon
-    num_units: 3
-    options:
-      monitor-count: '3'
-    to:
-      - '3'
-      - '4'
-      - '5'
 relations:
-  - - 'ceph-mon:client'
-    - 'ceph-iscsi:ceph-client'
-  - - 'ceph-osd:mon'
-    - 'ceph-mon:osd'
   - - 'ubuntu:juju-info'
     - 'iscsi-connector:host'
