--- a/tox.ini
+++ b/tox.ini
@@ -21,42 +21,42 @@ commands =
 	--omit tests/*,mod/*,.tox/*
     coverage html \
 	--omit tests/*,mod/*,.tox/*
-deps = -r{toxinidir}/tests/unit/requirements.txt
+deps = -r{toxinidir}/requirements.txt
 
 [testenv:functional]
 changedir = {toxinidir}/tests/functional
 commands = functest-run-suite {posargs}
-deps = -r{toxinidir}/tests/functional/requirements.txt
+deps = -r{toxinidir}/tests/requirements.txt
 
 [testenv:func-noop]
 basepython = python3
 commands =
     functest-run-suite --help
-deps = -r{toxinidir}/tests/functional/requirements.txt
+deps = -r{toxinidir}/tests/requirements.txt
 
 [testenv:func]
 basepython = python3
 commands =
     functest-run-suite --keep-model
-deps = -r{toxinidir}/tests/functional/requirements.txt
+deps = -r{toxinidir}/tests/requirements.txt
 
 [testenv:func-smoke]
 basepython = python3
 commands =
     functest-run-suite --keep-model --smoke
-deps = -r{toxinidir}/tests/functional/requirements.txt
+deps = -r{toxinidir}/tests/requirements.txt
 
 [testenv:func-dev]
 basepython = python3
 commands =
     functest-run-suite --keep-model --dev
-deps = -r{toxinidir}/tests/functional/requirements.txt
+deps = -r{toxinidir}/tests/requirements.txt
 
 [testenv:func-target]
 basepython = python3
 commands =
     functest-run-suite --keep-model --bundle {posargs}
-deps = -r{toxinidir}/tests/functional/requirements.txt
+deps = -r{toxinidir}/tests/requirements.txt
 
 [testenv:lint]
 commands = flake8
