Reload instead of restart for multiconf

--- a/actions.yaml
+++ b/actions.yaml
@@ -1,4 +1,4 @@
 restart-iscsi-services:
   description: "Restart iscsid and open-iscsi services"
-restart-multipathd-service:
-  description: "Restart multipathd service"
+reload-multipathd-service:
+  description: "Reload multipathd service"
