--- a/config.yaml
+++ b/config.yaml
@@ -22,8 +22,8 @@ options:
         type: string
         default:
         description: |
-            In multipath.conf, add a device specific configuration. String should be of 
-            json dictionary format. Example: 
+            In multipath.conf, add a device specific configuration. String should be of json dictionary format. 
+            Example: 
                 value : '{"vendor":"PURE","product": "FlashArray","fast_io_fail_tmo": "10", "path_grouping_policy":"group_by_prio"}'
                 will produce this configuration:
                 device {
