first draft of unit tests, WIP

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 skipsdist = True
 envlist = unit, functional
-skip_missing_interpreters = True
+sitepackages = False
+skip_missing_interpreters = False
 
 [testenv]
 basepython = python3
@@ -16,12 +17,28 @@ commands = charmcraft build
 
 [testenv:unit]
 commands = 
-    coverage run -m unittest discover -s {toxinidir}/tests/unit -v
-    coverage report \
-	--omit tests/*,mod/*,.tox/*
-    coverage html \
-	--omit tests/*,mod/*,.tox/*
-deps = -r{toxinidir}/requirements.txt
+    coverage erase
+    stestr run --slowest {posargs}
+    coverage combine
+    coverage html -d cover
+    coverage xml -o cover/coverage.xml
+    coverage report
+deps = -r{toxinidir}/unit_tests/requirements.txt
+       -r{toxinidir}/requirements.txt
+setenv = 
+     {[testenv]setenv}
+     PYTHON=coverage run
+
+[coverage:run]
+branch = True
+concurrency = multiprocessing
+parallel = True
+source = 
+    .
+omit = 
+    .tox/*
+    unit_tests/*
+    tests/*
 
 [testenv:functional]
 changedir = {toxinidir}/tests/functional
