--- a/tox.ini
+++ b/tox.ini
@@ -9,10 +9,10 @@ basepython = python3
 setenv =
   PYTHONPATH = {toxinidir}/lib/:{toxinidir}
 passenv = HOME
+allowlist_externals = charmcraft
 
 [testenv:build]
 basepython = python3
-deps = requirements.txt
 commands = charmcraft build
 
 [testenv:unit]
