--- a/tests/functional/tests/bundles/bionic.yaml
+++ b/tests/functional/tests/bundles/bionic.yaml
@@ -5,7 +5,7 @@ applications:
     charm: cs:ubuntu
     num_units: 1
   iscsi-connector:
-    charm: ../../../iscsi-connector.charm
+    charm: ../../../../iscsi-connector.charm
   ubuntu:
     charm: cs:ubuntu
     num_units: 1
