--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,8 @@ skip_missing_interpreters = False
 basepython = python3
 setenv =
   PYTHONPATH = {toxinidir}/lib/:{toxinidir}
-passenv = HOME
+passenv = 
+    HOME
 allowlist_externals = charmcraft
 
 [testenv:build]
