Fix path location with overlay for func tests

--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,12 @@ skip_missing_interpreters = False
 basepython = python3
 setenv =
   PYTHONPATH = {toxinidir}/lib/:{toxinidir}
+  CHARM_BUILD_DIR = {toxinidir}/.build
+  CHARM_NAME = iscsi-connector
 passenv = 
     HOME
+    CHARM_BUILD_DIR
+    CHARM_NAME
 allowlist_externals = charmcraft
 
 [testenv:build]
@@ -40,7 +44,7 @@ omit =
     .tox/*
     tests/*
 
-[testenv:functional]
+[testenv:func]
 changedir = {toxinidir}/tests/functional
 commands = functest-run-suite {posargs}
 deps = -r{toxinidir}/tests/functional/requirements.txt
