--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@ passenv =
     HOME
     CHARM_BUILD_DIR
     CHARM_NAME
-allowlist_externals = charmcraft
+whitelist_externals = charmcraft
 
 [testenv:build]
 basepython = python3
