--- a/tests/functional/tests/tests.yaml
+++ b/tests/functional/tests/tests.yaml
@@ -5,7 +5,7 @@ smoke_bundles:
 
 gate_bundles:
     - bionic
-    #- focal
+    - focal
 
 configure:
  - zaza.openstack.charm_tests.iscsi-connector.setup.basic_target_setup
