--- a/tests/functional/tests/bundles/bionic.yaml
+++ b/tests/functional/tests/bundles/bionic.yaml
@@ -4,7 +4,7 @@ applications:
     charm: cs:ubuntu
     num_units: 1
   iscsi-connector:
-    charm: ../../
+    charm: #path is defined in overlay because of bug https://github.com/openstack-charmers/zaza/issues/379
   ubuntu:
     charm: cs:ubuntu
     num_units: 1
