add option to skip discovery and login

--- a/config.yaml
+++ b/config.yaml
@@ -1,12 +1,20 @@
 options:
     target:
         type: string
+        default:
         description: 'ISCSI target IP'
-        default: 
     port:
         type: string
-        description: 'ISCSI target port'
         default:
+        description: 'ISCSI target port'
+    discovery-and-login:
+        type: boolean
+        default: True
+        description: |
+            If set to True (default), the charm will configure the iscsid.conf and 
+            multipathd.conf configuration files, and then run a iscsiadm discovery and login
+            against the target. If set to False, the charm will simply configure the unit
+            but not run the discovery and login against the target. 
     initiator-dictionary:
         type: string
         default: '{}'
