mock charm.utils.is_container

--- a/tox.ini
+++ b/tox.ini
@@ -65,6 +65,8 @@ deps =
     flake8-colors
 
 [flake8]
+ignore =
+    W504 # line break after binary operator
 exclude =
     .git,
     __pycache__,
@@ -72,6 +74,6 @@ exclude =
     mod,
     .history,
     build,
+    .build,
 max-line-length = 88
 max-complexity = 10
-import-order-style = google
