--- a/config.yaml
+++ b/config.yaml
@@ -3,14 +3,26 @@ options:
         type: string
         default:
         description: 'Type of storage connection. Can either be "iscsi" or "fc" for fibre channel.'
+    fc-wwnn:
+        type: string
+        default:
+        description: |
+        Fibre Channel World Wide Node Name. This option is to be used if all ports on each storage
+        server share a single WWNN. If not, use the fc-wwpn option. Must be formatted into a dictionary, 
+        where the key is the node hostname and the value is the wwnn.
     fc-wwpn:
         type: string
         default:
-        description: 'Fibre Channel World Wide Port Name for each FC port. Must be formatted into an array.'
+        description: |
+        Fibre Channel World Wide Port Name for each FC port. This option is to be used if all ports 
+        on each storage server have a unique identifier. Must be formatted into a dictionary, 
+        where the key is the node hostname and the value is an array of the wwpn for this server.
     fc-lun-names:
         type: string
         default:
-        description: 'Fibre Channel LUN names. Must be formatted into an array.'
+        description: |
+        Fibre Channel LUN names. Must be formatted into a dictionary, where the key is the node hostname 
+        and the value is the LUN attached to it.'
     iscsi-target:
         type: string
         default:
