--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ basepython = python3
 setenv =
   PYTHONPATH = {toxinidir}/lib/:{toxinidir}
   CHARM_BUILD_DIR = {toxinidir}/.build
-  CHARM_NAME = iscsi-connector
+  CHARM_NAME = storage-connector
 passenv = 
     HOME
     CHARM_BUILD_DIR
