--- a/tests/functional/tests/bundles/bionic.yaml
+++ b/tests/functional/tests/bundles/bionic.yaml
@@ -3,11 +3,11 @@ applications:
   ubuntu-target:
     charm: cs:ubuntu
     num_units: 1
-  iscsi-connector:
+  storage-connector:
     charm: #path is defined in overlay because of bug https://github.com/openstack-charmers/zaza/issues/379
   ubuntu:
     charm: cs:ubuntu
     num_units: 1
 relations:
   - - 'ubuntu:juju-info'
-    - 'iscsi-connector:host'
+    - 'storage-connector:host'
