remove default to force user to make a conscious choice between iscsi or fc. storage type cannot be changed after deployment.

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 options:
     storage-type:
         type: string
-        default: iscsi
+        default:
         description: 'Type of storage connection. Can either be "iscsi" or "fc" for fibre channel.'
     fc-lun-alias:
         type: string
