add blocked status if user tries to change storage type post-deployment

--- a/config.yaml
+++ b/config.yaml
@@ -2,7 +2,8 @@ options:
     storage-type:
         type: string
         default:
-        description: 'Type of storage connection. Can either be "iscsi" or "fc" for fibre channel.'
+        description: |
+            Type of storage connection. Can either be "iscsi" or "fc" for fibre channel. The storage type cannot be changed after deployment.
     fc-lun-alias:
         type: string
         default: data1
